--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <main>
+    <main class="main">
         <i class="devicon-github-original"></i>
 
         <section class="container">
